--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
 </head>
 <body>
-  <h1> [Your Name]'s Cydia Repository </h1>
-  <a class="cydiaLink" href="cydia://url/https://cydia.saurik.com/api/share#?source=[Add the link to your repo here, ie: mdausch.github.io]"> Click here to add [Your Name]'s Repo to Cydia!
+  <h1> Kurekk's Repo </h1>
+  <a class="cydiaLink" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://thesuskurekk.github.io/repo"> Click here to add my repo to Cydia!
 </body>
 </html>
